# AgriSage3

./: readme.md
log/: latest_list
src/bottle_detection_msgs/msg/: RobotStatus.msg
src/bottle_detection_robot/: package.xml  setup.cfg  setup.py
src/bottle_detection_robot/bottle_detection_robot/: bottle_detector.py  bottle_detector_node.py  camera_node.py  stereo_camera.py
src/bottle_detection_robot/launch/: bottle_detection.launch.py
src/bottle_detection_robot/msg/: BottleDetection.msg
src/bottle_detection_ros2/: BUG_FIX_SUMMARY.md  CMakeLists.txt  REFACTOR_SUMMARY.md  package.xml  setup.py
src/bottle_detection_ros2/bottle_detection_ros2/: __init__.py  auto_harvest_controller.py  bottle_detection_node.py  bottle_detection_node_async.py  bottle_detector.py  bottle_detector_async.py  debug_visualizer_gui.py  integrated_bottle_detection_node.py  robot_control_node.py  servo_control_node.py  stereo_camera.py  utils.py  websocket_bridge_node.py
src/bottle_detection_ros2/data/: test.py
src/bottle_detection_ros2/launch/: agrisage_with_lidar.launch.py  bottle_detection.launch.py  bottle_detection_async.launch.py  debug_nodes.launch.py  integrated_system.launch.py
src/bottle_detection_ros2/test/: bottle_detector_async.py  bottle_detector_test.py
